<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EP Mobile</string>
    <string name="about_text">
		Copyright \u00a9 2011-2026 EP Studios, Inc.\nAll rights reserved.
        \n\nVersion: %s
		\n\nepstudiossoftware.com
		\ngithub.com/mannd/epmobile
    </string>
    <string name="main_index_title">EP Mobile</string>
    <string name="about_label">About</string>
    <string name="about_title">EP Mobile</string>
    <string name="dofetilide_label">Dofetilide Calculator</string>
    <string name="dofetilide_calculator_title">Dofetilide Calculator</string>
    <string name="dabigatran_calculator_title">Dabigatran Calculator</string>
    <string name="dabigatran_label">Dabigatran Calculator</string>
    <string name="qtc_calculator_title">QTc Calculator</string>
    <string name="qtc_calculator_reference_bazett">Bazett H. C.
        An analysis of the time‐relations of electrocardiograms.
        Annals of Noninvasive Electrocardiology. 2006;2(2):177-194.</string>
    <string name="qtc_calculator_link_bazett">https://doi.org/10.1111/j.1542-474X.1997.tb00325.x</string>
    <string name="qtc_calculator_reference_fridericia">Fridericia LS.
        Die Systolendauer im Elektrokardiogramm bei normalen Menschen
        und bei Herzkranken. Acta Medica Scandinavica.
        1920;53(1):469-486.</string>
    <string name="qtc_calculator_link_fridericia">https://doi.org/10.1111/j.0954-6820.1920.tb18266.x</string>
    <string name="qtc_calculator_reference_sagie">Sagie A, Larson MG,
        Goldberg RJ, Bengtson JR, Levy D. An improved method for
        adjusting the QT interval for heart rate (the Framingham Heart Study).
        American Journal of Cardiology. 1992;70(7):797-801.</string>
    <string name="qtc_calculator_link_sagie">https://doi.org/10.1016/0002-9149(92)90562-D</string>
    <string name="qtc_calculator_reference_hodges">Hodges M, Salerno D,
        Erlinen D. Bazett’s QT correction reviewed: evidence that a linear
        QT correction for heart rate is better. J Am Coll Cardiol. 1983;1:694.</string>
    <string name="cycle_length_label">Interval/Rate Conversion</string>
    <string name="cycle_length_calculator_title">Interval/Rate Conversion</string>
    <string name="rr_hint">RR (msec)</string>
    <string name="interval_rate_title">Use RR Interval or Heart Rate</string>
    <string name="interval_rate_summary">Use RR interval or heart rate as default</string>
    <string name="qt_label">QT Interval (msec)</string>
    <string name="qt_hint">QT (msec)</string>
    <string name="qtc_result_label">QTc (msec)</string>
    <string name="qtc_formula_label">QTc Formula</string>
    <string name="calculate_label">Calculate</string>
    <string name="clear_label">Clear</string>
    <string name="dose_result_label">Dose</string>
    <string name="weight_hint">Weight</string>
    <string name="weight_lb_hint">Weight (lb)</string>
    <string name="creatinine_hint">Creatinine</string>
    <string name="age_hint">Age (yr)</string>
    <string name="age_label">Age (yr)</string>
    <string name="male_label">Male</string>
    <string name="female_label">Female</string>
    <string name="cl_label">Interval to Rate</string>
    <string name="cl_hint">Interval (msec)</string>
    <string name="hr_label">Rate to Interval</string>
    <string name="hr_hint">Rate (bpm)</string>
    <string name="calculated_result_label"/>
    <string name="qtc_formula_title">Default QTc Formula</string>
    <string name="qtc_formula_summary">Select the default QTc formula</string>
    <string name="maximum_qtc_title">Maximum QTc</string>
    <string name="maximum_qtc_summary">Enter the maximum QTc in msec</string>
    <string name="instructions_label">Instructions</string>
    <string name="secondary_prevention_label">Secondary Prevention</string>
    <string name="icd_cardiac_arrest_label">Documented CA due to VF, without transient or reversible cause</string>
    <string name="icd_sus_vt_label">Documented sustained VT/VF, either spontaneous or induced at EPS, not associated with an acute MI, 
	     and without transient or reversible cause</string>
    <string name="primary_prevention_label">Primary Prevention</string>
    <string name="icd_familial_conditions_label">Documented familial or inherited condition 
        with a high risk of life-threatening VT, including, but not limited to, Long QT Syndrome or HCM</string>
    <string name="icd_nonischemic_cm_label">Nonischemic cardiomyopathy on OMT \u2265 3 months</string>
    <string name="icd_ischemic_cm_label">Ischemic cardiomyopathy</string>
    <string name="icd_ef_gt_35_label">EF \u003e 35%</string>
    <string name="icd_ef_lt_35_label">EF \u003e 30% and \u2264 35%</string>
    <string name="icd_ef_lt_30_label">EF \u2264 30%</string>
    <string name="icd_mi_label">Prior MI</string>
    <string name="icd_nyha1_label">NYHA class I</string>
    <string name="icd_nyha2_label">NYHA class II</string>
    <string name="icd_nyha3_label">NYHA class III</string>
    <string name="icd_nyha4_label">NHYA class IV</string>
    <string name="exclusions_label">Exclusion</string>
    <string name="icd_cardiogenic_shock_label">Not clinically stable (e.g. in shock, from any etiology)</string>
    <string name="icd_recent_cabg_label">CABG or PCI within past 3 months</string>
    <string name="icd_recent_mi_label">Acute MI within past 40 days</string>
    <string name="icd_revascularization_candidate_label">Symptoms or findings that would make patient a candidate for revascularization</string>
    <string name="icd_brain_damage_label">Significant, irreversible brain damage</string>
    <string name="icd_svt_uncontrolled_rate_label">SVT, e.g. AF, with poorly controlled ventricular rate</string>
    <string name="icd_bad_prognosis_label">Non-cardiac disease with likelihood of survival \u003c 1 year</string>
    <string name="cms_icd_key">AF = atrial fibrillation.\nCA
        = cardiac arrest.\nCABG
        = coronary artery bypass grafting.\nCM
        = cardiomyopathy.\nCMS
        = Centers for Medicare and Medicaid Services.\nEF
        = ejection fraction.\nEPS
        = electrophysiology study.\nHCM
        = hypertrophic cardiomyopathy.\nICD
        = implantable cardioverter defibrillator.\nOMT
        = optimal medical therapy.\nMI
        = myocardial infarction.\nNYHA
        = New York Heart Association.\nPCI
        = percutaneous coronary intervention.\nSVT
        = supraventricular tachycardia.\nVT
        = ventricular tachycardia/tachyarrhythmia.\nVF
        = ventricular fibrillation.\n</string>
    <string name="sokolow_label">Sokolow-Lyon Index</string>
    <string name="sokolow_s_plus_r_label">S in V1 + R in V5 or V6</string>
    <string name="sokolow_s_plus_r_result">\u2265 35 mm</string>
    <string name="sokolow_r_in_avl_label">R in aVL</string>
    <string name="sokolow_r_in_avl_result">\u2265 11 mm</string>
    <string name="cornell_label">Cornell Voltage Criteria</string>
    <string name="cornell_men_label">S in V3 + R in aVL (men)</string>
    <string name="cornell_men_result">> 28 mm</string>
    <string name="cornell_women_label">S in V3 + R in aVL (women)</string>
    <string name="cornell_women_result">> 20 mm</string>
    <string name="other_voltage_criteria_label">Minnesota Code 3.1</string>
    <string name="other_lvh_lead_i_label">R in I, II, III, or aVF</string>
    <string name="other_lvh_lead_i_result">> 20 mm</string>
    <string name="other_lvh_lead_avl_label">R in aVL</string>
    <string name="other_lvh_lead_avl_result">> 12 mm</string>
    <string name="other_lvh_lead_v5_label">R in V5 or V6</string>
    <string name="other_lvh_lead_v5_result">> 26 mm</string>
    <string name="other_lvh_key">LVH present if any of above voltage criteria met.</string>
    <string name="other_lvh_reference">Hsieh BP, Pham MX, Froelicher VF.
        Prognostic value of electrocardiographic criteria for left ventricular
        hypertrophy. American Heart Journal. 2005;150(1):161-167.</string>
    <string name="nyha_class_label">NYHA functional class</string>
    <string name="absolute_exclusions_label">Absolute Exclusions</string>
    <string name="personal_hx_vt_ca_label">Personal history of sustained VT or CA due to VF with:</string>
    <string name="ejection_fraction_label">EF</string>
    <string name="other_indication_label">Other Indications</string>
    <string name="icd_replacement_label">Patient with existing ICD at ERI or with lead/device malfunction</string>
    <string name="icd_transplant_bridge_label">Candidates for heart transplantation on transplant list</string>
    <string name="waiting_period_label">Waiting Periods</string>
    <string name="etiology_label">Etiology</string>
    <string name="clinical_presentation_label">Clinical Presentation</string>
    <string name="imaging_label">Imaging</string>
    <string name="malignant_disease_label">Malignant disease</string>
    <string name="dyspnea_label">Dyspnea/Tachypnea</string>
    <string name="cardiomegaly_label">Cardiomegaly on CXR</string>
    <string name="tamponade_key">IVC = inferior vena cava,
        \nPE = pericardial effusion,
        \nSBP = systolic blood pressure.</string>
    <string name="tamponade_reference">Ristić AD, Imazio M, Adler Y, et al.
        Triage strategy for urgent management of cardiac tamponade: a position
        statement of the European Society of Cardiology Working Group on
        Myocardial and Pericardial Diseases. European Heart Journal.
        2014;35(34):2279-2284.</string>
    <string name="tuberculosis_label">Tuberculosis</string>
    <string name="recent_radiotherapy_label">Recent radiotherapy</string>
    <string name="recent_viral_infection_label">Recent viral infection</string>
    <string name="recurrent_pe_label">Recurrent PE, previous pericardiocentesis</string>
    <string name="chronic_renal_failure_label">Chronic terminal renal failure</string>
    <string name="immunodeficiency_label">Immunodeficiency or immunosuppression</string>
    <string name="hypo_hyperthyroidism_label">Hypo- or hyperthyroidism</string>
    <string name="autoimmune_disease_label">Systemic autoimmune disease</string>
    <string name="orthopnea_label">Orthopnea (NO rales on lung auscultation)</string>
    <string name="hypotension_label">Hypotension (SBP &lt; 95 mmHg)</string>
    <string name="sinus_tachycardia_label">Progressive sinus tachycardia
        (in the absence of medications affecting heart rate,
        hypothyroidism and uremia)</string>
    <string name="oliguria_label">Oliguria</string>
    <string name="pulsus_paradoxus_label">Pulsus paradoxus &gt; 10 mmHg</string>
    <string name="friction_rub_label">Pericardial friction rub</string>
    <string name="chest_pain_label">Pericardial chest pain</string>
    <string name="symptom_worsening_label">Rapid worsening of symptoms</string>
    <string name="slow_evolution_label">Slow evolution of the disease</string>
    <string name="electrical_alternans_label">Electrical alternans on ECG</string>
    <string name="microvoltage_label">Microvoltage in ECG</string>
    <string name="circumferential_pe_label">Circumferential PE (&gt; 2 cm in diastole)</string>
    <string name="moderate_pe_label">Moderate PE (1&#8211;2 cm in diastole)</string>
    <string name="small_pe_label">Small PE (&lt; 1 cm in diastole), no trauma</string>
    <string name="ra_collapse_label">Right atrial collapse &gt; &#8531; of cardiac cycle</string>
    <string name="large_ivc_label">IVC &gt; 2.5 cm, &lt; 50% inspiratory collapse</string>
    <string name="rv_collapse_label">Right ventricular collapse</string>
    <string name="la_collapse_label">Left atrial collapse</string>
    <string name="respiratory_variations_label">Mitral/tricuspid respiratory flow variations</string>
    <string name="swinging_heart_label">Swinging heart</string>
</resources>