<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/calculateButtonsLayout"
    style="?android:attr/buttonBarStyle"
    android:divider="?android:dividerVertical"
    android:orientation="horizontal"
    android:showDividers="middle"
    android:layout_alignParentBottom="true"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/calculate_dose_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/calculate_label" />

    <Button
        android:id="@+id/clear_button"
        android:layout_weight="1"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_label" />

    <Button
        android:id="@+id/instructions_button"
        android:layout_weight="1"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions_label" />

</LinearLayout>
